Adaptive MCMC with optimisation

--- a/Extended model/Testing odin with Bayesian tools.Rmd
+++ b/Extended model/Testing odin with Bayesian tools.Rmd
@@ -246,7 +246,8 @@ bayesianSetup <- createBayesianSetup(likelihood = loglik,
                                     names = names(theta[index]))
 nchains <- 2
 mcmc_settings <- list(iterations = 2*80000, 
-                      nrChains = nchains)
+                      nrChains = nchains,adapt = T, # running an adaptive MCMC
+                      optimize = T)
 system.time({trace <- runMCMC(bayesianSetup = bayesianSetup, 
                    sampler = "Metropolis", 
                    settings = mcmc_settings)}) # takes about 3 hours
