--- a/Extended model/Testing odin with Bayesian tools.Rmd
+++ b/Extended model/Testing odin with Bayesian tools.Rmd
@@ -268,7 +268,6 @@ system.time({trace <- runMCMC(bayesianSetup = bayesianSetup,
 
 ```{r}
 # DIAGNOSTICS -----------------------------------------------
-
 plot(trace) 
 
 # burn-in
@@ -289,7 +288,7 @@ coda::effectiveSize(tracefinal)
 summary(tracefinal)
 
 # save the trace
-saveRDS(trace, "/Users/juliamayer/Library/CloudStorage/OneDrive-Charité-UniversitätsmedizinBerlin/LSTHM project/Extension/Odin model with BT and 1 M.rds")
+saveRDS(trace, "/Users/juliamayer/Library/CloudStorage/OneDrive-Charité-UniversitätsmedizinBerlin/LSTHM project/Extension/Odin model with 1 M.rds")
 ```
 
 ```{r}
@@ -364,38 +363,38 @@ colnames(Wquantiles) <- c("agemid", "low95", "median", "up95")
 
 
 # Cumulative proportion seroconverted by season of birth
-# spring_conv_quantiles <- plyr::ddply(.data = trajsim, .variables = "time", 
-#                                      function(x) quantile(x[,"conv_spring"], prob = c(0.025, 0.5, 0.975), na.rm=T)) 
-# colnames(spring_conv_quantiles) <- c("agemid", "low95", "median", "up95")
-# 
-# summer_conv_quantiles <- plyr::ddply(.data = trajsim, .variables = "time", 
-#                                      function(x) quantile(x[,"conv_summer"], prob = c(0.025, 0.5, 0.975), na.rm=T)) 
-# colnames(summer_conv_quantiles) <- c("agemid", "low95", "median", "up95")
-# 
-# autumn_conv_quantiles <- plyr::ddply(.data = trajsim, .variables = "time", 
-#                                      function(x) quantile(x[,"conv_autumn"], prob = c(0.025, 0.5, 0.975), na.rm=T)) 
-# colnames(autumn_conv_quantiles) <- c("agemid", "low95", "median", "up95")
-# 
-# winter_conv_quantiles <- plyr::ddply(.data = trajsim, .variables = "time", 
-#                                      function(x) quantile(x[,"conv_winter"], prob = c(0.025, 0.5, 0.975), na.rm=T)) 
-# colnames(winter_conv_quantiles) <- c("agemid", "low95", "median", "up95")
+spring_conv_quantiles <- plyr::ddply(.data = trajsim, .variables = "time",
+                                     function(x) quantile(x[,"R_sp"], prob = c(0.025, 0.5, 0.975), na.rm=T))
+colnames(spring_conv_quantiles) <- c("agemid", "low95", "median", "up95")
+
+summer_conv_quantiles <- plyr::ddply(.data = trajsim, .variables = "time",
+                                     function(x) quantile(x[,"R_sm"], prob = c(0.025, 0.5, 0.975), na.rm=T))
+colnames(summer_conv_quantiles) <- c("agemid", "low95", "median", "up95")
+
+autumn_conv_quantiles <- plyr::ddply(.data = trajsim, .variables = "time",
+                                     function(x) quantile(x[,"R_au"], prob = c(0.025, 0.5, 0.975), na.rm=T))
+colnames(autumn_conv_quantiles) <- c("agemid", "low95", "median", "up95")
+
+winter_conv_quantiles <- plyr::ddply(.data = trajsim, .variables = "time",
+                                     function(x) quantile(x[,"R_wt"], prob = c(0.025, 0.5, 0.975), na.rm=T))
+colnames(winter_conv_quantiles) <- c("agemid", "low95", "median", "up95")
 
 # Incident proportion seroconverted by season of birth
-spring_conv_quantiles_inc <- plyr::ddply(.data = trajsim, .variables = "time", 
-                                     function(x) quantile(x[,"R_sp"], prob = c(0.025, 0.5, 0.975), na.rm=T)) 
-colnames(spring_conv_quantiles_inc) <- c("agemid", "low95", "median", "up95")
-
-summer_conv_quantiles_inc <- plyr::ddply(.data = trajsim, .variables = "time", 
-                                     function(x) quantile(x[,"R_sm"], prob = c(0.025, 0.5, 0.975), na.rm=T)) 
-colnames(summer_conv_quantiles_inc) <- c("agemid", "low95", "median", "up95")
-
-autumn_conv_quantiles_inc <- plyr::ddply(.data = trajsim, .variables = "time", 
-                                     function(x) quantile(x[,"R_au"], prob = c(0.025, 0.5, 0.975), na.rm=T)) 
-colnames(autumn_conv_quantiles_inc) <- c("agemid", "low95", "median", "up95")
-
-winter_conv_quantiles_inc <- plyr::ddply(.data = trajsim, .variables = "time", 
-                                     function(x) quantile(x[,"R_wt"], prob = c(0.025, 0.5, 0.975), na.rm=T)) 
-colnames(winter_conv_quantiles_inc) <- c("agemid", "low95", "median", "up95")
+# spring_conv_quantiles_inc <- plyr::ddply(.data = trajsim, .variables = "time", 
+#                                      function(x) quantile(x[,"R_sp"], prob = c(0.025, 0.5, 0.975), na.rm=T)) 
+# colnames(spring_conv_quantiles_inc) <- c("agemid", "low95", "median", "up95")
+# 
+# summer_conv_quantiles_inc <- plyr::ddply(.data = trajsim, .variables = "time", 
+#                                      function(x) quantile(x[,"R_sm"], prob = c(0.025, 0.5, 0.975), na.rm=T)) 
+# colnames(summer_conv_quantiles_inc) <- c("agemid", "low95", "median", "up95")
+# 
+# autumn_conv_quantiles_inc <- plyr::ddply(.data = trajsim, .variables = "time", 
+#                                      function(x) quantile(x[,"R_au"], prob = c(0.025, 0.5, 0.975), na.rm=T)) 
+# colnames(autumn_conv_quantiles_inc) <- c("agemid", "low95", "median", "up95")
+# 
+# winter_conv_quantiles_inc <- plyr::ddply(.data = trajsim, .variables = "time", 
+#                                      function(x) quantile(x[,"R_wt"], prob = c(0.025, 0.5, 0.975), na.rm=T)) 
+# colnames(winter_conv_quantiles_inc) <- c("agemid", "low95", "median", "up95")
 
 # Plot fit and FOI
 # Whole dataset
